# AUV

./: .gitignore  .gitmodules  LICENSE  README.md  README.md.old  requirements.txt
.github/workflows/: pytest.yml
Motion/: thruster_class.py
Tardigrade Setup Docs/: CameraAccess.md  MicroROS.md  MultiMachine.md
comms/: README.md
control/: README.md
control/hub/: .connections.h.swp  .gitignore  .main.cpp.swp  README.md  autonomy.h  auv-hub  build.sh  config.h  connections.h  control.h  jetson.h  lib.cpp  lib.h  log.cpp  log.h  main.cpp  modules.h  motion.h  sensors.h
control/logging/: .gitignore  README.md  build.sh  config.h  connections.h  files.h  main.cpp
control/microcontroller/pi-pico-comm-control/: .gitignore  CMakeLists.txt  README.md  main.py
control/microcontroller/pi-pico-comm-control/include/: PiPicoCommController.h
control/microcontroller/pi-pico-comm-control/src/: PiPicoCommController.cpp  main.cpp
control/pid-controller/: CMakeLists.txt  README.md
control/pid-controller-2/: .gitignore  README.md  build.sh  main.cpp  pid.h
control/pid-controller/include/: PIDController.h
control/pid-controller/src/: PIDController.cpp  main.cpp
deployment/: README.md
deployment/test_utils/: README.md
devel/: .catkin  .rosinstall  setup.sh
jetson/Jetson_computer_vision/: .gitignore  CMakeLists.txt  README.md  detection.cpp  detection.h  helper_functions.cpp  helper_functions.h  main.cpp  visual-odometry.cpp  visual-odometry.h
jetson/TensorRT-CV/: CMakeLists.txt  README.md  detection.cpp  detection.h  helper_functions.cu  helper_functions.cuh  main.cpp
jetson/src/: main.cpp
keyboard_control/: CMakeLists.txt  package.xml
launch/: tardigrade_auto.launch  tardigrade_teleop.launch
lib/network/: README.md  connections.h
mvp_msgs/: .gitignore  CMakeLists.txt  README.md  package.xml
mvp_msgs/msg/: ControlMode.msg  ControlModes.msg  ControlProcess.msg  Float64Stamped.msg  Float64StampedWithVariance.msg  HelmState.msg  HelmStates.msg  NMEA.msg  PIDgains.msg  Power.msg  PwmSignal.msg  SetpointBehavior.msg  VehicleStatus.msg  Waypoint.msg
mvp_msgs/srv/: ChangeState.srv  GetControlMode.srv  GetControlModes.srv  GetState.srv  GetStates.srv  GetWaypoints.srv  LoadWaypoint.srv  SendWaypoints.srv  SetControlPoint.srv
pico_code/: main.py
pico_controller/: CMakeLists.txt  README.md  package.xml
pico_controller/launch/: pico_controller.launch
pico_controller/src/: pico_thruster_controller.py
pico_workspace/: main.py
pico_workspace/pico_custom_binaries/: CMakeLists.txt
pico_workspace/pico_micropython/: main.py
pico_workspace/tardigrade_thruster_mcu/: CMakeLists.txt  README.md
pico_workspace/tardigrade_thruster_mcu/src/: main.cpp  thruster_config.h  thruster_control.cpp
pico_workspace/thruster_interface_board/: CMakeLists.txt  README.md
prequal_pkg/: package.xml
prequal_pkg/Tardigrade Setup Docs/: MultiMachine.md
prequal_pkg/launch/: prequal_sim.launch  prequal_vehicle.launch
prequal_pkg/metadata/: materials.scn.xacro
prequal_pkg/vehicles/: tardigrade.scn.xacro
prequal_tardigrade/: CMakeLists.txt  package.xml
sensors/: CMakeLists.txt  README.md  package.xml
sensors/IMU/: .gitignore  README.md  build.sh  driver.cpp  driver.h  main.cpp
sensors/launch/: bno055.launch  calibrate_bno055.launch  camera.launch  echosounder.launch  sensors.launch
sensors/launch/include/: bno055.launch  camera.launch  echosounder.launch
sensors/leak-sensor/: README.md  driver.h
sensors/leak-sensor/src/: main.cpp
sensors/pressure-sensor/: .driver.cpp.swp  .driver.h.swp  .gitignore  README.md  build.sh  driver.cpp  driver.cpp.old  driver.h  driver_pigpio.cpp  driver_pigpio.h  main.cpp
sensors/single-beam-sonar/: README.md
sensors/single-beam-sonar/sonar_driver/: README.md  driver.cpp  driver.h  main.cpp
sensors/src/: bno055.py  bno055_publisher.py  calibrate_bno055.py  camera_publisher.py  echosounder.py  echosounder_publisher.py  ping1dechosounder.py
sensors/test/: bno055_test.py  echosounder_test.py  echosounder_test_dist.py  echosounder_test_profile.py
sensors/tracker-650/: CMakeLists.txt
sensors/tracker-650/include/: DVLController.h
sensors/tracker-650/src/: DVLController.cpp  README.md  main.cpp
src/: .gitignore  README.md
src/competition_pkg/: CMakeLists.txt
src/prequal_pkg/: package.xml
src/prequal_pkg/launch/: prequal_sim.launch
src/prequal_pkg/metadata/: looks.scn.xacro
src/prequal_pkg/vehicles/: tardigrade.scn.xacro
src/prequal_pkg/world/: prequal_tank.scn.xacro
src/preregistration_pkg/: CMakeLists.txt  package.xml
src/preregistration_pkg/launch/: preregistration_sim.launch
src/preregistration_pkg/teleop/: teleop.cpp  teleop.py
src/preregistration_pkg/vehicles/: tardigrade.scn.xacro
src/preregistration_pkg/world/: tardigrade_preregistration.scn.xacro
startup/: README.md
styleguide/: cppguide.html  pyguide.md
tardigrade/: CMakeLists.txt  package.xml
tardigrade/Tardigrade Setup Docs/: MicroROS.md  MultiMachine.md
tardigrade/data/objects/: Gate Task.stl  Path.stl
tardigrade/launch/: tardigrade.launch  tardigrade_auto.launch  tardigrade_sim.launch  tardigrade_teleop.launch  test_thrusters.launch
tardigrade/launch/include/: pi_pico.launch.xml
tardigrade/metadata/: looks.scn.xacro
tardigrade/movement/: moveScript.py
tardigrade/pico_code/: main.py
tardigrade/pico_controller/: CMakeLists.txt  package.xml
tardigrade/pico_controller/launch/: pico_controller.launch
tardigrade/pico_controller/src/: pico_thruster_controller.py
tardigrade/scripts/: auto.py  camera_auto.py  camera_test.py  dirty_auto.py  find_usb_serial_num.py  test_thrusters.py
tardigrade/sensors/src/: echosounder.py
tardigrade/sensors/test/: echosounder_test.py
tardigrade/teleop/: teleop.py
tardigrade/vehicles/: tardigrade.scn.xacro  testing.py
tardigrade/world/: prequal_tank.scn.xacro  tank.scn.xacro
tardigrade_sim/: CMakeLists.txt  README.md  package.xml
test/: workflow_test.py
tests/: aclass.py  test_aclass.py
topside/: CMakeLists.txt  README.md  package.xml
topside/launch/: surface_view.launch
(+268 files in other folders)
