<?xml version="1.0"?>
<package format="2">
  <name>tardigrade</name>
  <version>0.0.0</version>
  <description>The onboard package, as in this is directly installed onto the Tardigrade robot.</description>

  <maintainer email="dhunsberger@uri.edu">Devin Hunsberger</maintainer>
  <author email="dhunsberger@uri.edu">Devin Hunsberger</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>stonefish_mvp</depend>
  <depend>keyboard_control</depend>
  <depend>mvp_msgs</depend>

</package>