<?xml version="1.0"?>
<package format="2">
  <name>topside</name>
  <version>0.0.0</version>
  <description>The offboard package, as in this is ran on the surface laptop for monitoring the system.</description>

  <maintainer email="dhunsberger@uri.edu">Devin Hunsberger</maintainer>
  <author email="dhunsberger@uri.edu">Devin Hunsberger</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>