<?xml version="1.0"?>
<package format="2">
  <name>prequal</name>
  <version>0.0.0</version>
  <description>The preregistration sim package</description>

  <maintainer email="dhunsberger@uri.edu">Devin Hunsberger</maintainer>
  <author email="dhunsberger@uri.edu">Devin Hunsberger</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>stonefish_mvp</depend>
  <depend>keyboard_control</depend>

</package>