<?xml version="1.0"?>
<package format="2">
  <name>preregistration</name>
  <version>0.0.0</version>
  <description>The preregistration sim package</description>

  <maintainer email="dhunsberger@uri.edu">Devin Hunsberger</maintainer>
  <author email="dhunsberger@uri.edu">Devin Hunsberger</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>world_of_stonefish</depend>

  <export>

  </export>
</package>